[package]
name = "firec"
description = "Rust API to interact with firecracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.2.0"
hyper = { version = "0.14.18", features = ["client" , "http2"] }
hyperlocal = "0.8.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
tokio = { version = "1.18.1", features = ["process", "net", "fs", "time"] }
users = "0.11.0"
uuid = { version = "1.0.0", features = ["serde", "v4"] }

[dev-dependencies]
tokio = { version = "1.18.1", features = ["rt", "macros"] }