[package]
name = "firec"
description = "Rust API to interact with Firecracker"
version = "0.1.1"
edition = "2021"
keywords = ["firecracker", "unix", "linux", "microvm", "IPC"]
categories = ["os::linux-apis", "virtualization", "web-programming::http-client"]
license-file = "LICENSE"
repository = "https://github.com/blockjoy/firec/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.2.0"
futures-util = "0.3.21"
hyper = {version = "0.14.18", features = ["client", "http2"]}
hyperlocal = "0.8.0"
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
sysinfo = "0.23.12"
thiserror = "1.0.31"
tokio = {version = "1.18.1", features = ["process", "net", "fs", "rt", "time"]}
tracing = "0.1.34"
users = "0.11.0"
uuid = {version = "1.0.0", features = ["serde", "v4"]}

[dev-dependencies]
doc-comment = "0.3.3"
tokio = {version = "1.18.1", features = ["rt", "macros"]}
