[package]
name = "firec"
description = "Rust API to interact with Firecracker"
version = "0.2.0"
edition = "2021"
keywords = ["firecracker", "unix", "linux", "microvm", "IPC"]
categories = ["os::linux-apis", "virtualization", "web-programming::http-client"]
license = "Apache-2.0"
repository = "https://github.com/blockjoy/firec/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.2.0"
futures-util = "0.3.25"
hyper = {version = "0.14.23", features = ["client", "http2"]}
hyperlocal = "0.8.0"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
sysinfo = "0.27.7"
thiserror = "1.0.38"
tokio = {version = "1.24.2", features = ["process", "net", "fs", "rt", "time"]}
tracing = "0.1.37"
users = "0.11.0"
uuid = {version = "1.2.2", features = ["serde", "v4"]}

[dev-dependencies]
doc-comment = "0.3.3"
tokio = {version = "1.24.2", features = ["rt", "macros"]}
reqwest = "0.11.15"
